--- a/.travis.yml
+++ b/.travis.yml
@@ -14,3 +14,12 @@ before_script:
 
 script:
   - vendor/bin/phpunit
+
+deploy:
+  provider: heroku
+  api_key:
+    secure: "8028dad9-27b9-492a-83bf-84c2a7288d58"
+  app: gentle-dusk-79476
+  on: master
+  run:
+    - php artisan migrate
