--- a/.travis.yml
+++ b/.travis.yml
@@ -23,3 +23,6 @@ deploy:
   on: master
   run:
     - php artisan migrate
+    - npm install --global gulp-cli
+    - npm install
+    - gulp --production
