--- a/package.json
+++ b/package.json
@@ -14,6 +14,6 @@
     "purecss": "^0.6.0"
   },
   "scripts": {
-    "postinstall": "gulp --production"
+    "postinstall": "npm install --global gulp-cli; gulp --production"
   }
 }
