--- a/package.json
+++ b/package.json
@@ -1,13 +1,10 @@
 {
   "private": true,
-  "scripts": {
-    "prod": "gulp --production",
-    "dev": "gulp watch"
-  },
   "dependencies": {
     "gulp": "^3.9.1",
     "jquery": "^3.1.0",
     "laravel-elixir": "^6.0.0-9",
+    "laravel-elixir-vue": "^0.1.4",
     "laravel-elixir-webpack-official": "^1.0.2",
     "purecss": "^0.6.0"
   },
@@ -21,6 +18,8 @@
     "purecss": "^0.6.0"
   },
   "scripts": {
-    "postinstall": "npm install gulp-cli; gulp --production"
+    "prod": "gulp --production",
+    "dev": "gulp watch",
+    "postinstall": "gulp --production"
   }
 }
